Bug 41400 - Fails to build with polkit disabled
Summary: Fails to build with polkit disabled
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: client (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 00:44 UTC by hollunder
Modified: 2011-10-03 02:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description hollunder 2011-10-02 00:44:09 UTC
1) Your bug reporting page is unclear whether bugs should be reported to the tracker or the mailinglist.
2) There's no component in the tracker for the build system.

Distribution: Arch Linux
Version 0.1.12
Built with a modified build script from the distribution (added --disable-polkit) https://projects.archlinux.org/svntogit/packages.git/tree/trunk/PKGBUILD?h=packages/colord

Here's the output:

...
make[4]: Leaving directory `/home/murks/colord/src/colord-0.1.12/doc/api/dbus'
make[4]: Entering directory `/home/murks/colord/src/colord-0.1.12/doc/api'
make[4]: Nothing to be done for `all-am'.
make[4]: Leaving directory `/home/murks/colord/src/colord-0.1.12/doc/api'
make[3]: Leaving directory `/home/murks/colord/src/colord-0.1.12/doc/api'
make[3]: Entering directory `/home/murks/colord/src/colord-0.1.12/doc'
make[3]: Nothing to be done for `all-am'.
make[3]: Leaving directory `/home/murks/colord/src/colord-0.1.12/doc'
make[2]: Leaving directory `/home/murks/colord/src/colord-0.1.12/doc'
Making all in src
make[2]: Entering directory `/home/murks/colord/src/colord-0.1.12/src'
  CC     libcolord_sensor_dummy_la-cd-sensor-dummy.lo
  CCLD   libcolord_sensor_dummy.la
  CC     libcolord_sensor_munki_la-cd-sensor-munki.lo
  CCLD   libcolord_sensor_munki.la
  CC     libcolord_sensor_huey_la-cd-sensor-huey.lo
  CCLD   libcolord_sensor_huey.la
  CC     colord-cd-buffer.o
  CC     colord-cd-common.o
cd-common.c:24:27: fatal error: polkit/polkit.h: No such file or directory
compilation terminated.
make[2]: *** [colord-cd-common.o] Error 1
make[2]: Leaving directory `/home/murks/colord/src/colord-0.1.12/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/murks/colord/src/colord-0.1.12'
make: *** [all] Error 2
Comment 1 Richard Hughes 2011-10-03 02:05:31 UTC
commit 93de3a1d4043f0dfef9d4dbf95c544338b548105
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Oct 3 10:04:58 2011 +0100

    Fix the --disable-polkit build
    
    Resolves https://bugs.freedesktop.org/show_bug.cgi?id=41400


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.