Fix the --disable-polkit build

Resolves https://bugs.freedesktop.org/show_bug.cgi?id=41400